--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
         </exclusion>
     </exclusions>
 </dependency>
+		<dependency>
+			<groupId>com.comcat</groupId>
+			<artifactId>Comcast-Activation-Service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
